<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:orientation="vertical"
              android:transitionName="@string/transition_name"
              android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatImageView android:layout_width="match_parent"
                                                  android:id="@+id/appLogo"
                                                  app:layout_constraintTop_toTopOf="parent"
                                                  android:src="@drawable/logo_vector"
                                                  android:layout_marginTop="@dimen/_50sdp"
                                                  android:layout_marginLeft="@dimen/_40sdp"
                                                  android:layout_marginRight="@dimen/_40sdp"
                                                  android:layout_height="wrap_content"/>


    <com.sd.src.stepcounterapp.utils.CustomTextView android:id="@+id/forgotTextView"
                                                    android:layout_width="wrap_content"
                                                    app:layout_constraintTop_toBottomOf="@+id/appLogo"
                                                    style="@style/headerTextStyle"
                                                    android:text="Forgot Password?"
                                                    android:layout_height="wrap_content"
                                                    app:appfont="montserrat_semibold.ttf"
                                                    app:layout_constraintStart_toStartOf="parent"/>

    <com.sd.src.stepcounterapp.utils.CustomTextView
            android:text="@string/registd_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:appfont="montserrat_regular.ttf"
            android:layout_marginRight="@dimen/_12sdp"
            android:textSize="@dimen/_14sdp"
            android:layout_marginLeft="@dimen/_12sdp"/>

    <com.google.android.material.textfield.TextInputLayout android:layout_height="wrap_content"
                                                           android:id="@+id/emailLayout"
                                                           style="@style/textLayoutStyle"
                                                           android:layout_width="match_parent">

        <com.google.android.material.textfield.TextInputEditText android:id="@+id/emailTxt"
                                                                 android:hint="@string/hint_email"
                                                                 android:maxLength="60"
                                                                 android:inputType="textEmailAddress"
                                                                 android:singleLine="true"
                                                                 android:layout_width="match_parent"
                                                                 android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.sd.src.stepcounterapp.utils.CustomButton
            android:layout_width="match_parent"
            android:id="@+id/resetBttn"
            android:text="@string/sign_up"
            style="@style/BttnStyle"
            app:appButtonfont="montserrat_medium.ttf"
            android:background="@drawable/button_background"
            app:layout_constraintTop_toBottomOf="@+id/emailLayout"
            android:layout_height="wrap_content"/>


</LinearLayout>
